test/tests/errors/error-command-cannot-be-expression.sm
// false
// false
// false
/**/
/**/

program {
    1 + 1;
}